# fiap-data-engineering-trabalho-final

./: MANIFEST.in  README.md  app_config.py  main.py  pipeline_orchestrator.py  pyproject.toml  reader.py  sales_report_service.py  spark_session_manager.py  test_runner.py  writer.py
